--- a/cnn_minpy.ipynb
+++ b/cnn_minpy.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Convolutional Networks with minpy+mxnet\n",
     "\n",
-    "In this notebook, we show how to implement a CNN with minpy and mxnet. Your job is to design the forward model and train the parameters. Note that the convolution layers are efficiently implemented by using mxnet symbols.\n",
+    "In this notebook, we show how to implement a CNN with minpy and mxnet. Your job is to design the forward model and train the parameters. Note that the convolution layers are efficiently implemented by using mxnet symbols. You should get more than 70% accuracy on validation dataset.\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -41,24 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "input_size=(3, 32, 32)\n",
     "flattened_input_size=3 * 32 * 32\n",
-    "data_dir = '/cifar-10-batches-py'\n",
+    "# bash get_datasets.sh if you do not have the cifar10 dataset\n",
+    "data_dir = './cifar-10-batches-py'\n",
     "data = get_CIFAR10_data(data_dir)\n",
     "num_classes=10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -68,18 +69,20 @@
     "reg = 0.001\n",
     "num_filter = 128\n",
     "ks = (5,5)\n",
-    "num_epo = 8\n",
+    "num_epo = 10\n",
     "learning_rate = 2e-4\n",
     "# END TODO\n",
+    "\n",
+    "\n",
     "class ConvolutionNet(ModelBase):\n",
     "    def __init__(self):\n",
     "        super(ConvolutionNet, self).__init__()\n",
-    "        # TODO: Define symbols that using multiple layers of convolution and max pooling to extract better features\n",
+    "        # TODO: Define symbols using multiple layers of convolution and max pooling to extract better features\n",
     "        # from input image.\n",
     "        net = mx.sym.Variable(name='X')\n",
     "        \n",
     "        net = mx.sym.Convolution(\n",
-    "                data=net, name='conv1', kernel=ks, num_filter=nfilter)\n",
+    "                data=net, name='conv1', kernel=ks, num_filter=num_filter)\n",
     "        net = mx.sym.Activation(\n",
     "                data=net, act_type='relu')\n",
     "        net = mx.sym.Pooling(\n",
@@ -87,7 +90,7 @@
     "                stride=(2, 2))\n",
     "        \n",
     "        net = mx.sym.Convolution(\n",
-    "                data=net, name='conv2', kernel=ks, num_filter=nfilter)\n",
+    "                data=net, name='conv2', kernel=ks, num_filter=num_filter)\n",
     "        net = mx.sym.Activation(\n",
     "                data=net, act_type='relu')\n",
     "        net = mx.sym.Pooling(\n",
@@ -122,11 +125,91 @@
     "        return out\n",
     "\n",
     "    def loss(self, predict, y):\n",
-    "\tloss_reg = reg\n",
-    "\tfor name, weight in self.params.iteritems():\n",
+    "        loss_reg = reg\n",
+    "        for name, weight in self.params.iteritems():\n",
     "    \t    loss_reg += np.sum(weight**2)\n",
     "        return layers.softmax_loss(predict, y) + 0.5*reg*loss_reg\n",
     "\n",
+    "\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 1148) loss: 2.304477\n",
+      "(Iteration 21 / 1148) loss: 2.077509\n",
+      "(Iteration 41 / 1148) loss: 1.997448\n",
+      "(Iteration 61 / 1148) loss: 1.969889\n",
+      "(Iteration 81 / 1148) loss: 1.814104\n",
+      "(Iteration 101 / 1148) loss: 1.749671\n",
+      "(Iteration 121 / 1148) loss: 1.600048\n",
+      "(Iteration 141 / 1148) loss: 1.509827\n",
+      "(Iteration 161 / 1148) loss: 1.567641\n",
+      "(Iteration 181 / 1148) loss: 1.470913\n",
+      "(Iteration 201 / 1148) loss: 1.488777\n",
+      "(Iteration 221 / 1148) loss: 1.490559\n",
+      "(Iteration 241 / 1148) loss: 1.354200\n",
+      "(Iteration 261 / 1148) loss: 1.508165\n",
+      "(Iteration 281 / 1148) loss: 1.242928\n",
+      "(Iteration 301 / 1148) loss: 1.434858\n",
+      "(Iteration 321 / 1148) loss: 1.430913\n",
+      "(Iteration 341 / 1148) loss: 1.233354\n",
+      "(Iteration 361 / 1148) loss: 1.316367\n",
+      "(Iteration 381 / 1148) loss: 1.198666\n",
+      "(Epoch 1 / 3) train acc: 0.535156; val_acc: 0.533203\n",
+      "(Iteration 401 / 1148) loss: 1.279022\n",
+      "(Iteration 421 / 1148) loss: 1.055716\n",
+      "(Iteration 441 / 1148) loss: 1.405368\n",
+      "(Iteration 461 / 1148) loss: 1.139587\n",
+      "(Iteration 481 / 1148) loss: 1.517576\n",
+      "(Iteration 501 / 1148) loss: 1.168532\n",
+      "(Iteration 521 / 1148) loss: 1.104632\n",
+      "(Iteration 541 / 1148) loss: 1.194266\n",
+      "(Iteration 561 / 1148) loss: 1.140429\n",
+      "(Iteration 581 / 1148) loss: 1.076068\n",
+      "(Iteration 601 / 1148) loss: 1.162391\n",
+      "(Iteration 621 / 1148) loss: 1.310441\n",
+      "(Iteration 641 / 1148) loss: 1.081520\n",
+      "(Iteration 661 / 1148) loss: 1.083843\n",
+      "(Iteration 681 / 1148) loss: 1.184858\n",
+      "(Iteration 701 / 1148) loss: 1.059721\n",
+      "(Iteration 721 / 1148) loss: 1.139904\n",
+      "(Iteration 741 / 1148) loss: 1.038470\n",
+      "(Iteration 761 / 1148) loss: 0.998646\n",
+      "(Epoch 2 / 3) train acc: 0.625977; val_acc: 0.624023\n",
+      "(Iteration 781 / 1148) loss: 1.086599\n",
+      "(Iteration 801 / 1148) loss: 0.985788\n",
+      "(Iteration 821 / 1148) loss: 1.069502\n",
+      "(Iteration 841 / 1148) loss: 1.251777\n",
+      "(Iteration 861 / 1148) loss: 1.143277\n",
+      "(Iteration 881 / 1148) loss: 1.046997\n",
+      "(Iteration 901 / 1148) loss: 0.959836\n",
+      "(Iteration 921 / 1148) loss: 1.063392\n",
+      "(Iteration 941 / 1148) loss: 0.880542\n",
+      "(Iteration 961 / 1148) loss: 0.897974\n",
+      "(Iteration 981 / 1148) loss: 0.917087\n",
+      "(Iteration 1001 / 1148) loss: 0.989731\n",
+      "(Iteration 1021 / 1148) loss: 0.969251\n",
+      "(Iteration 1041 / 1148) loss: 0.920094\n",
+      "(Iteration 1061 / 1148) loss: 0.980640\n",
+      "(Iteration 1081 / 1148) loss: 0.857802\n",
+      "(Iteration 1101 / 1148) loss: 0.908024\n",
+      "(Iteration 1121 / 1148) loss: 0.845429\n",
+      "(Iteration 1141 / 1148) loss: 0.857203\n",
+      "(Epoch 3 / 3) train acc: 0.716797; val_acc: 0.677734\n"
+     ]
+    }
+   ],
+   "source": [
     "    # Create model.\n",
     "    model = ConvolutionNet()\n",
     "    # Create data iterators for training and testing sets.\n",
@@ -138,18 +221,8 @@
     "    test_dataiter = NDArrayIter(data=data['X_test'],\n",
     "                                label=data['y_test'],\n",
     "                                batch_size=batch_size,\n",
-    "                                shuffle=False)\n",
-    "      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "                                shuffle=False)   \n",
+    "    \n",
     "    # Train your CNN model.\n",
     "    solver = Solver(model,\n",
     "                    train_dataiter,\n",
@@ -176,9 +249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
